--- a/incognito/Info.plist
+++ b/incognito/Info.plist
@@ -42,7 +42,7 @@
 	<string>use location</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>use photo library</string>
-	<key>Privacy - Camera Usage Description </key>
+	<key>Privacy — Camera Usage Description</key>
 	<string>use your camera</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
